--- a/index.css
+++ b/index.css
@@ -4,14 +4,14 @@ header{
     flex-direction: row;
     background: #FFFFFF;
     box-shadow: 0px 4px 27px rgba(0, 0, 0, 0.04);
-    width:75%;
+    
     justify-content: center;
-    margin-left: 75px;
+   
 
 
 }
 img{
-    position: absolute;
+    position: relative;
     margin-left: 150px;
 }
 * {
