--- a/index.css
+++ b/index.css
@@ -11,8 +11,8 @@ header{
 
 }
 img{
-    width: 70%;
-    margin-left: 50px;
+    
+    overflow: hidden; 
 }
 * {
     box-sizing: border-box;
@@ -30,9 +30,10 @@ img{
 }
 .column3 {
     
-    width: 10%;
+    
     padding: 10px;
     margin-left: 50px;
+   
     
 }
 input{
@@ -65,7 +66,7 @@ a{
 .picture1{
     display: flex;
     flex-direction: row;
-   
+   overflow: hidden;
 
 }
 .picture2{
