--- a/index1.css
+++ b/index1.css
@@ -2,12 +2,17 @@
     display: flex;
     flex-direction: row;
     gap:25px;
+    
+    justify-content: center;
+    
 }
 .column1{
 
-}
+        margin-bottom: 10px;
+        } 
 p{
-    text-align: center;    
+    text-align: center;
+    font-family: calibri;  
 }
 .row2{
     display: flex;
@@ -17,4 +22,84 @@ p{
 .column1>div{
     background-color: #ecebeb;
     
+}
+.para1{
+    
+    font-weight: 600;
+    text-align: center;
+    font-family: calibri;
+    letter-spacing: 2px;
+}
+.container{
+    text-align: center;
+}
+#button{
+    background: #ffffff;
+    border: 1px solid #E0E0E0;
+    width:8%;
+    justify-content: center;
+     
+}
+.row3{
+    display: flex;
+    flex-direction: row;
+    
+    gap:25px;
+    justify-content: center;
+    margin: 25px auto;
+}
+.row4{
+    display: flex;
+    flex-direction: row;
+   
+    gap:25px; 
+    overflow: hidden;
+}
+.row5{
+    display: flex;
+    flex-direction: row;
+   
+    gap:25px; 
+    overflow: hidden;
+   
+    justify-content: center;
+    
+   
+}
+a{
+    text-decoration: none;
+    
+    font-family: calibri;
+}
+ul{
+    list-style-type: none;
+    line-height: 2em;
+    font-size: 20px;
+}
+.col1{
+    margin-left: 40px;
+}
+.col1>p{
+    font-family: calibri;
+    font-size: 20px;
+    
+}
+.row6{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    background: #EAEAEA;
+}
+.line{
+    border-right: 1px solid #000;
+    padding:0px 24px;
+}
+.line1{
+    padding-right: 48px;
+}
+.backclr{
+    background: #F7F7F7;
+}
+.last{
+    text-align: center;
 }
