--- a/Blog Editor/editfinal.css
+++ b/Blog Editor/editfinal.css
@@ -1,22 +1,36 @@
 .edit{
-    display: block;
-    gap:20px;
-    margin:20px 50px;
-    flex-wrap: wrap;
+    /* display: block;
+    gap:20px; */
+    /* width:500px;
+    display: flex;
+    gap:20px; */
+    /* margin:20px 50px; */
+    /* flex-wrap: wrap; */
 }
 .editorbox{
-    height: 450px;
+    height: auto;
     border: 1px solid #000;
+    padding: 10px;
+}
+a,.link{
+  cursor: pointer;
+}
+.editorbox img{
+  width: 100px;
+  height: 100px;
+}
+#show-code[data-active="true"] {
+	background:silver;
+}
+blockquote{
+  background-color: aqua;
 }
 /* .tooltip:hover .tooltiptext {
     visibility: visible;
   }
   .tooltip .tooltiptext {
     visibility: hidden;} */
-
-    .indleft{ padding-left: 30px;}
-    .indright{padding-right: 30px;}
-    .popup{
+    /* .popup{
     width:200px;
     background-color:#fff;
     position: absolute;
@@ -26,13 +40,48 @@
     left:50%;
     padding:50px;
     visibility: hidden;    
+    } */
+    /* blockquote{
+      background-color: aqua;
+    } */
+    
+    .code1{
+      background-color:#000;
+      height:auto;
+      color:#fff;
+      padding:20px;
     }
-    .open-popup{
-        visibility: visible;
+    .filechose{
+    border: none;
+    width: 75px;
+    opacity: 0.5;
     }
-    .highlight {
-        background-color: #EEF43B;
-      }
-      .link{
-        cursor: pointer;
-      }
+    .btns{
+      border: none;
+      background: none;
+    }
+    /* .addimg{
+      position: relative;
+      left: 1px;
+      top: 2px;
+    } */
+    .mycolor,.mybg,#myColor,#myBg,#code,#show-code{
+      border: none;
+      background: none;
+    }
+    /* Style the active class, and buttons on mouse-over */
+.active1 {
+  background-color: silver;
+}
+.btn_active1:hover{
+  background-color: silver;
+}
+[contenteditable=true]:empty:before{
+  content: attr(placeholder);
+  pointer-events: none;
+  display: block; /* For Firefox */
+}
+/* select{
+  width: 100px;
+} */
+    
