--- a/Home page/Task2res.css
+++ b/Home page/Task2res.css
@@ -469,9 +469,9 @@ button[type="submit"] {
  body{
   overflow-x: hidden;
  }
- .toggle{
+ /* .toggle{
 
- }
+ } */
  .hide_nav{
     display: none;
  }
