--- a/Href website/hrefwebsite.css
+++ b/Href website/hrefwebsite.css
@@ -699,7 +699,7 @@ ul.breadcrumb li+li:before{
     background-color: #054ada;
     height: 57px;
 }
-.reveal{
+/* .reveal{
     position: relative;
     transform: translateX(150px);
     opacity: 0;
@@ -709,4 +709,4 @@ ul.breadcrumb li+li:before{
   .reveal.active{
     transform: translateX(0);
     opacity: 1;
-  }
+  } */
